updated at: 2020-01-20 16:36, 紅葉飾り - CaTrusty - BOOTH

--- a/VRChat/29/1020729.html
+++ b/VRChat/29/1020729.html
@@ -6,7 +6,7 @@
       紅葉飾り - CaTrusty - BOOTH
     </title>
     <meta name="description" content=
-    "秋に向けて、シンプルな紅葉の飾りです。 髪飾りや服飾、武器につけてみたり……なんでも組み合わせやすいと思います。 ～内容物～ ・unitypackage ・FBX ・テクスチャ ・各種説明書（画像説明ありのPDF形式） 　※（12/07）ネットで見られる手順書を作成しました（PDFは情報が古い可能性があります） ★利用規約・導入などの説明はこちらをご覧ください。（ページ下部から該当シートを選んでください）">
+    "シンプルな紅葉の飾りです。 髪飾りや服飾、武器につけてみたり……なんでも組み合わせやすいと思います。">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1020729">
@@ -14,13 +14,13 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="紅葉飾り - CaTrusty - BOOTH">
     <meta name="twitter:description" content=
-    "秋に向けて、シンプルな紅葉の飾りです。 髪飾りや服飾、武器につけてみたり……なんでも組み合わせやすいと思います。 ～内容物～ ・unitypackage ・FBX ・テクスチャ ・各種説明書（画像説明ありのPDF形式） 　※（12/07）ネットで見られる手順書を作成しました（PDFは情報が古い可能性があります） ★利用規約・導入などの説明はこちらをご覧ください。（ページ下部から該当シートを選んでください）">
+    "シンプルな紅葉の飾りです。 髪飾りや服飾、武器につけてみたり……なんでも組み合わせやすいと思います。">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/42ee0553-4a9c-4ab5-8673-ebcc9fd6f0be/i/1020729/508091cc-5d1a-4f81-afa4-2e658934c6e9_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content="紅葉飾り - CaTrusty - BOOTH">
     <meta property="og:description" content=
-    "秋に向けて、シンプルな紅葉の飾りです。 髪飾りや服飾、武器につけてみたり……なんでも組み合わせやすいと思います。 ～内容物～ ・unitypackage ・FBX ・テクスチャ ・各種説明書（画像説明ありのPDF形式） 　※（12/07）ネットで見られる手順書を作成しました（PDFは情報が古い可能性があります） ★利用規約・導入などの説明はこちらをご覧ください。（ページ下部から該当シートを選んでください）">
+    "シンプルな紅葉の飾りです。 髪飾りや服飾、武器につけてみたり……なんでも組み合わせやすいと思います。">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/42ee0553-4a9c-4ab5-8673-ebcc9fd6f0be/i/1020729/508091cc-5d1a-4f81-afa4-2e658934c6e9_base_resized.jpg">
     <meta property="og:url" content=
@@ -78,7 +78,7 @@
         <div class="market-item-detail u-bg-white"
         data-product-brand="catrusty" data-product-category="127"
         data-product-id="1020729" data-product-list="market_show"
-        data-product-price="300" data-tracking="detail_item">
+        data-product-price="500" data-tracking="detail_item">
           <nav>
             <div class="breadcrumbs u-border-b u-border-100">
               <div class="container">
@@ -166,7 +166,7 @@
                                   </div>
                                   <div class=
                                   "variation-price u-text-right">
-                                    ¥ 300
+                                    ¥ 500
                                   </div>
                                 </div>
                                 <div class="variation-cart">
@@ -179,7 +179,7 @@
                                       "patch"><button class=
                                       "btn add-cart full-length"
                                       data-product-id="1020729"
-                                      data-product-price="300"
+                                      data-product-price="500"
                                       data-product-brand="catrusty"
                                       data-product-category="127"
                                       data-product-variant=
@@ -195,7 +195,7 @@
                                         <button class=
                                         "btn add-cart full-length"
                                         data-product-id="1020729"
-                                        data-product-price="300"
+                                        data-product-price="500"
                                         data-product-brand=
                                         "catrusty"
                                         data-product-category="127"
@@ -250,7 +250,7 @@
                             <img alt="紅葉飾り" class=
                             "market-item-detail-item-image"
                             data-lazy=
-                            "https://booth.pximg.net/42ee0553-4a9c-4ab5-8673-ebcc9fd6f0be/i/1020729/8899df06-234d-4aa4-8338-cb331da22fb9_base_resized.jpg">
+                            "https://booth.pximg.net/42ee0553-4a9c-4ab5-8673-ebcc9fd6f0be/i/1020729/88cabfea-6e58-43b1-a397-946c0d7263a5_base_resized.jpg">
                           </div>
                         </div>
                         <div>
@@ -259,7 +259,7 @@
                             <img alt="紅葉飾り" class=
                             "market-item-detail-item-image"
                             data-lazy=
-                            "https://booth.pximg.net/42ee0553-4a9c-4ab5-8673-ebcc9fd6f0be/i/1020729/37cc88fd-9dd8-4ee4-8669-0623742c0551_base_resized.jpg">
+                            "https://booth.pximg.net/42ee0553-4a9c-4ab5-8673-ebcc9fd6f0be/i/1020729/8a7aebd2-ff49-479c-aff6-991718e304bd_base_resized.jpg">
                           </div>
                         </div>
                       </div>
@@ -271,28 +271,19 @@
                         </div></a><a class="pointer">
                         <div class="slick-thumbnail-border">
                           <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/42ee0553-4a9c-4ab5-8673-ebcc9fd6f0be/i/1020729/8899df06-234d-4aa4-8338-cb331da22fb9_base_resized.jpg">
+                          "https://booth.pximg.net/c/72x72_a2_g5/42ee0553-4a9c-4ab5-8673-ebcc9fd6f0be/i/1020729/88cabfea-6e58-43b1-a397-946c0d7263a5_base_resized.jpg">
                         </div></a><a class="pointer">
                         <div class="slick-thumbnail-border">
                           <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/42ee0553-4a9c-4ab5-8673-ebcc9fd6f0be/i/1020729/37cc88fd-9dd8-4ee4-8669-0623742c0551_base_resized.jpg">
+                          "https://booth.pximg.net/c/72x72_a2_g5/42ee0553-4a9c-4ab5-8673-ebcc9fd6f0be/i/1020729/8a7aebd2-ff49-479c-aff6-991718e304bd_base_resized.jpg">
                         </div></a>
                       </div>
                       <section>
                         <div class=
                         "js-market-item-detail-description">
                           <p class="autolink u-text-wrap">
-                            秋に向けて、シンプルな紅葉の飾りです。
+                            シンプルな紅葉の飾りです。
                             髪飾りや服飾、武器につけてみたり……なんでも組み合わせやすいと思います。
-                            ～内容物～ ・unitypackage ・FBX ・テクスチャ
-                            ・各種説明書（画像説明ありのPDF形式）
-                            　※（12/07）ネットで見られる手順書を作成しました（PDFは情報が古い可能性があります）
-                            ★利用規約・導入などの説明はこちらをご覧ください。（ページ下部から該当シートを選んでください）
-                            https://docs.google.com/spreadsheets/d/1DCh-S5Rafb_NYJTQHtXame5xNWiDTWg5RKkcSiIdyXA/edit?usp=sharing
-                            ～詳細～ ・三角面数：452 ・ダイナミックボーン対応 ・マテリアル：1
-                            ・まんまるしぇーだー適用済み
-                            　※必要に応じて最新版のシェーダーをご使用ください。
-                            ・prefabやシーンデータ込み
                           </p>
                         </div>
                       </section>
@@ -323,6 +314,17 @@
                               <div class=
                               "search-guide-tablet-label-inner">
                                 3D
+                              </div>
+                            </div></a><a class=
+                            "search-guide-tablet" data-tracking=
+                            "click" data-product-list=
+                            "from market_show via tag_list to search_index"
+                            href=
+                            "https://booth.pm/ja/search/%E3%82%A2%E3%82%AF%E3%82%BB%E3%82%B5%E3%83%AA">
+                            <div class="search-guide-tablet-label">
+                              <div class=
+                              "search-guide-tablet-label-inner">
+                                アクセサリ
                               </div>
                             </div></a><a class=
                             "search-guide-tablet" data-tracking=
