updated at: 2020-01-20 16:58, 「本日の主役」タスキ(VRChat想定) - りょーねーの倉庫 - BOOTH

--- a/VRChat/09/1009509.html
+++ b/VRChat/09/1009509.html
@@ -6,7 +6,7 @@
       「本日の主役」タスキ(VRChat想定) - りょーねーの倉庫 - BOOTH
     </title>
     <meta name="description" content=
-    "「本日の主役」と記されたタスキです。 ジョークグッズなので、軽い気持ちでご利用ください。 また、UVマップを配置しているのでお好きなタスキを作ることができます。 身体に埋まるので、それを避けたい方は3Dモデリングの知識が少し必要になります。 10分で作ったものなので、無料の方でどんどん使ってください。 △96です。 ※2つとも内容品は同じです。">
+    "「本日の主役」と記されたタスキです。 ジョークグッズなので、軽い気持ちでご利用ください。 また、UVマップを配置しているのでお好きなタスキを作ることができます。 身体に埋まるので、それを避けたい方はリギング等の知識が少し必要になります。 10分で作ったものなのでどんどん使ってください。 △96です。 ※2つとも内容品は同じです。">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1009509">
@@ -15,14 +15,14 @@
     <meta name="twitter:title" content=
     "「本日の主役」タスキ(VRChat想定) - りょーねーの倉庫 - BOOTH">
     <meta name="twitter:description" content=
-    "「本日の主役」と記されたタスキです。 ジョークグッズなので、軽い気持ちでご利用ください。 また、UVマップを配置しているのでお好きなタスキを作ることができます。 身体に埋まるので、それを避けたい方は3Dモデリングの知識が少し必要になります。 10分で作ったものなので、無料の方でどんどん使ってください。 △96です。 ※2つとも内容品は同じです。">
+    "「本日の主役」と記されたタスキです。 ジョークグッズなので、軽い気持ちでご利用ください。 また、UVマップを配置しているのでお好きなタスキを作ることができます。 身体に埋まるので、それを避けたい方はリギング等の知識が少し必要になります。 10分で作ったものなのでどんどん使ってください。 △96です。 ※2つとも内容品は同じです。">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/2a1d68f2-987f-4432-b142-5cbae38f36da/i/1009509/e540ecb5-7b17-4409-9774-f649dab926ef_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
     "「本日の主役」タスキ(VRChat想定) - りょーねーの倉庫 - BOOTH">
     <meta property="og:description" content=
-    "「本日の主役」と記されたタスキです。 ジョークグッズなので、軽い気持ちでご利用ください。 また、UVマップを配置しているのでお好きなタスキを作ることができます。 身体に埋まるので、それを避けたい方は3Dモデリングの知識が少し必要になります。 10分で作ったものなので、無料の方でどんどん使ってください。 △96です。 ※2つとも内容品は同じです。">
+    "「本日の主役」と記されたタスキです。 ジョークグッズなので、軽い気持ちでご利用ください。 また、UVマップを配置しているのでお好きなタスキを作ることができます。 身体に埋まるので、それを避けたい方はリギング等の知識が少し必要になります。 10分で作ったものなのでどんどん使ってください。 △96です。 ※2つとも内容品は同じです。">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/2a1d68f2-987f-4432-b142-5cbae38f36da/i/1009509/e540ecb5-7b17-4409-9774-f649dab926ef_base_resized.jpg">
     <meta property="og:url" content=
@@ -162,7 +162,7 @@
                                 "lo-grid u-align-items-center">
                                   <div class="lo-grid-cell">
                                     <div class="variation-name">
-                                      こちらは体験版ではありません。
+                                      無料！
                                     </div>
                                     <div class=
                                     "variation-caption variation-caption--type">
@@ -315,8 +315,8 @@
                             「本日の主役」と記されたタスキです。
                             ジョークグッズなので、軽い気持ちでご利用ください。
                             また、UVマップを配置しているのでお好きなタスキを作ることができます。
-                            身体に埋まるので、それを避けたい方は3Dモデリングの知識が少し必要になります。
-                            10分で作ったものなので、無料の方でどんどん使ってください。 △96です。
+                            身体に埋まるので、それを避けたい方はリギング等の知識が少し必要になります。
+                            10分で作ったものなのでどんどん使ってください。 △96です。
                             ※2つとも内容品は同じです。
                           </p>
                         </div>
