updated at: 2020-01-20 17:47, 四つ葉の帯飾り - CaTrusty - BOOTH

--- a/VRChat/06/976706.html
+++ b/VRChat/06/976706.html
@@ -6,7 +6,7 @@
       四つ葉の帯飾り - CaTrusty - BOOTH
     </title>
     <meta name="description" content=
-    "自分用に作った和の入ったガラスモチーフの四つ葉飾りです。 シンプルですが割とローポリなのでワンポイントにでもどうぞ。 帯飾りとしていますが、挿す部分や紐は非表示にすることもできます。 【内容物】 ・unitypackage ・FBX ・テクスチャ ・各種説明書（画像説明ありのPDF形式） 　※（12/07）ネットで見られる手順書を作成しました（PDFは情報が古い可能性があります） ★利用規約・導入などの説明はこちらをご覧ください。（ページ下部から該当シートを選んでください）">
+    "自分用に作った和の入ったガラスモチーフの四つ葉飾りです。 シンプルですが割とローポリなのでワンポイントにでもどうぞ。 帯飾りとしていますが、挿す部分や紐がないバージョンも同梱しています。">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/976706">
@@ -15,13 +15,13 @@
     <meta name="twitter:title" content=
     "四つ葉の帯飾り - CaTrusty - BOOTH">
     <meta name="twitter:description" content=
-    "自分用に作った和の入ったガラスモチーフの四つ葉飾りです。 シンプルですが割とローポリなのでワンポイントにでもどうぞ。 帯飾りとしていますが、挿す部分や紐は非表示にすることもできます。 【内容物】 ・unitypackage ・FBX ・テクスチャ ・各種説明書（画像説明ありのPDF形式） 　※（12/07）ネットで見られる手順書を作成しました（PDFは情報が古い可能性があります） ★利用規約・導入などの説明はこちらをご覧ください。（ページ下部から該当シートを選んでください）">
+    "自分用に作った和の入ったガラスモチーフの四つ葉飾りです。 シンプルですが割とローポリなのでワンポイントにでもどうぞ。 帯飾りとしていますが、挿す部分や紐がないバージョンも同梱しています。">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/42ee0553-4a9c-4ab5-8673-ebcc9fd6f0be/i/976706/f34576f8-0c26-46ce-b65e-96ee4939c011_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content="四つ葉の帯飾り - CaTrusty - BOOTH">
     <meta property="og:description" content=
-    "自分用に作った和の入ったガラスモチーフの四つ葉飾りです。 シンプルですが割とローポリなのでワンポイントにでもどうぞ。 帯飾りとしていますが、挿す部分や紐は非表示にすることもできます。 【内容物】 ・unitypackage ・FBX ・テクスチャ ・各種説明書（画像説明ありのPDF形式） 　※（12/07）ネットで見られる手順書を作成しました（PDFは情報が古い可能性があります） ★利用規約・導入などの説明はこちらをご覧ください。（ページ下部から該当シートを選んでください）">
+    "自分用に作った和の入ったガラスモチーフの四つ葉飾りです。 シンプルですが割とローポリなのでワンポイントにでもどうぞ。 帯飾りとしていますが、挿す部分や紐がないバージョンも同梱しています。">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/42ee0553-4a9c-4ab5-8673-ebcc9fd6f0be/i/976706/f34576f8-0c26-46ce-b65e-96ee4939c011_base_resized.jpg">
     <meta property="og:url" content=
@@ -79,7 +79,7 @@
         <div class="market-item-detail u-bg-white"
         data-product-brand="catrusty" data-product-category="127"
         data-product-id="976706" data-product-list="market_show"
-        data-product-price="300" data-tracking="detail_item">
+        data-product-price="500" data-tracking="detail_item">
           <nav>
             <div class="breadcrumbs u-border-b u-border-100">
               <div class="container">
@@ -167,7 +167,7 @@
                                   </div>
                                   <div class=
                                   "variation-price u-text-right">
-                                    ¥ 300
+                                    ¥ 500
                                   </div>
                                 </div>
                                 <div class="variation-cart">
@@ -180,7 +180,7 @@
                                       "patch"><button class=
                                       "btn add-cart full-length"
                                       data-product-id="976706"
-                                      data-product-price="300"
+                                      data-product-price="500"
                                       data-product-brand="catrusty"
                                       data-product-category="127"
                                       data-product-variant=
@@ -196,7 +196,7 @@
                                         <button class=
                                         "btn add-cart full-length"
                                         data-product-id="976706"
-                                        data-product-price="300"
+                                        data-product-price="500"
                                         data-product-brand=
                                         "catrusty"
                                         data-product-category="127"
@@ -299,14 +299,7 @@
                           <p class="autolink u-text-wrap">
                             自分用に作った和の入ったガラスモチーフの四つ葉飾りです。
                             シンプルですが割とローポリなのでワンポイントにでもどうぞ。
-                            帯飾りとしていますが、挿す部分や紐は非表示にすることもできます。 【内容物】
-                            ・unitypackage ・FBX ・テクスチャ
-                            ・各種説明書（画像説明ありのPDF形式）
-                            　※（12/07）ネットで見られる手順書を作成しました（PDFは情報が古い可能性があります）
-                            ★利用規約・導入などの説明はこちらをご覧ください。（ページ下部から該当シートを選んでください）
-                            https://docs.google.com/spreadsheets/d/1DCh-S5Rafb_NYJTQHtXame5xNWiDTWg5RKkcSiIdyXA/edit?usp=sharing
-                            【詳細】 ・三角面数：606 ・ダイナミックボーン対応 ・マテリアル：3
-                            ・マテリアル適用済みのSceneデータもあります
+                            帯飾りとしていますが、挿す部分や紐がないバージョンも同梱しています。
                           </p>
                         </div>
                       </section>
@@ -332,6 +325,17 @@
                             <a class="search-guide-tablet"
                             data-tracking="click"
                             data-product-list="from market_show via tag_list to search_index"
+                            href=
+                            "https://booth.pm/ja/search/%E3%82%A2%E3%82%AF%E3%82%BB%E3%82%B5%E3%83%AA%E3%83%BC">
+                            <div class="search-guide-tablet-label">
+                              <div class=
+                              "search-guide-tablet-label-inner">
+                                アクセサリー
+                              </div>
+                            </div></a><a class=
+                            "search-guide-tablet" data-tracking=
+                            "click" data-product-list=
+                            "from market_show via tag_list to search_index"
                             href=
                             "https://booth.pm/ja/search/Unity">
                             <div class="search-guide-tablet-label">
@@ -383,9 +387,9 @@
                         "click" data-product-list=
                         "from market_show via tag_category_search to search_index"
                         href=
-                        "https://booth.pm/ja/browse/3D%E3%83%A2%E3%83%87%E3%83%AB?q=Unity">
+                        "https://booth.pm/ja/browse/3D%E3%83%A2%E3%83%87%E3%83%AB?q=%E3%82%A2%E3%82%AF%E3%82%BB%E3%82%B5%E3%83%AA%E3%83%BC">
                         <div class="search-label">
-                          Unity x 3Dモデル で検索
+                          アクセサリー x 3Dモデル で検索
                         </div></a>
                       </div>
                     </div>
