--- a/VRChat/85/925185.html
+++ b/VRChat/85/925185.html
@@ -6,7 +6,7 @@
       リボン付き貝飾り - CaTrusty - BOOTH
     </title>
     <meta name="description" content=
-    "夏っぽいイメージの貝飾りです。 服や水着などにワンポイントつけると可愛いかも。 ～内容物～ ・FBX ・テクスチャ ・unitypackage ・各種説明書（画像説明ありのPDF形式） 　※（12/07）ネットで見られる手順書を作成しました（PDFは情報が古い可能性があります） ★利用規約・導入などの説明はこちらをご覧ください。（ページ下部から該当シートを選んでください） https://docs.google.com/spreadsheets/d/1DCh-S5Rafb_NYJTQHtXame5xNWiDTWg5RKkcSiIdyXA/edit?usp=sharing ～詳細～">
+    "夏っぽいイメージの貝飾りです。 服や水着などにワンポイントつけると可愛いかも。">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/925185">
@@ -15,16 +15,16 @@
     <meta name="twitter:title" content=
     "リボン付き貝飾り - CaTrusty - BOOTH">
     <meta name="twitter:description" content=
-    "夏っぽいイメージの貝飾りです。 服や水着などにワンポイントつけると可愛いかも。 ～内容物～ ・FBX ・テクスチャ ・unitypackage ・各種説明書（画像説明ありのPDF形式） 　※（12/07）ネットで見られる手順書を作成しました（PDFは情報が古い可能性があります） ★利用規約・導入などの説明はこちらをご覧ください。（ページ下部から該当シートを選んでください） https://docs.google.com/spreadsheets/d/1DCh-S5Rafb_NYJTQHtXame5xNWiDTWg5RKkcSiIdyXA/edit?usp=sharing ～詳細～">
+    "夏っぽいイメージの貝飾りです。 服や水着などにワンポイントつけると可愛いかも。">
     <meta name="twitter:image" content=
-    "https://booth.pximg.net/c/620x620/42ee0553-4a9c-4ab5-8673-ebcc9fd6f0be/i/925185/6682231e-50c4-4ec6-b3d9-9235d1b71f0c_base_resized.jpg">
+    "https://booth.pximg.net/c/620x620/42ee0553-4a9c-4ab5-8673-ebcc9fd6f0be/i/925185/7964a609-bcb2-4c59-8f42-e34b854f2af8_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
     "リボン付き貝飾り - CaTrusty - BOOTH">
     <meta property="og:description" content=
-    "夏っぽいイメージの貝飾りです。 服や水着などにワンポイントつけると可愛いかも。 ～内容物～ ・FBX ・テクスチャ ・unitypackage ・各種説明書（画像説明ありのPDF形式） 　※（12/07）ネットで見られる手順書を作成しました（PDFは情報が古い可能性があります） ★利用規約・導入などの説明はこちらをご覧ください。（ページ下部から該当シートを選んでください） https://docs.google.com/spreadsheets/d/1DCh-S5Rafb_NYJTQHtXame5xNWiDTWg5RKkcSiIdyXA/edit?usp=sharing ～詳細～">
+    "夏っぽいイメージの貝飾りです。 服や水着などにワンポイントつけると可愛いかも。">
     <meta property="og:image" content=
-    "https://booth.pximg.net/c/620x620/42ee0553-4a9c-4ab5-8673-ebcc9fd6f0be/i/925185/6682231e-50c4-4ec6-b3d9-9235d1b71f0c_base_resized.jpg">
+    "https://booth.pximg.net/c/620x620/42ee0553-4a9c-4ab5-8673-ebcc9fd6f0be/i/925185/7964a609-bcb2-4c59-8f42-e34b854f2af8_base_resized.jpg">
     <meta property="og:url" content=
     "https://booth.pm/ja/items/925185">
     <meta name="skip_auto_login" content="">
@@ -80,7 +80,7 @@
         <div class="market-item-detail u-bg-white"
         data-product-brand="catrusty" data-product-category="127"
         data-product-id="925185" data-product-list="market_show"
-        data-product-price="300" data-tracking="detail_item">
+        data-product-price="500" data-tracking="detail_item">
           <nav>
             <div class="breadcrumbs u-border-b u-border-100">
               <div class="container">
@@ -168,7 +168,7 @@
                                   </div>
                                   <div class=
                                   "variation-price u-text-right">
-                                    ¥ 300
+                                    ¥ 500
                                   </div>
                                 </div>
                                 <div class="variation-cart">
@@ -181,7 +181,7 @@
                                       "patch"><button class=
                                       "btn add-cart full-length"
                                       data-product-id="925185"
-                                      data-product-price="300"
+                                      data-product-price="500"
                                       data-product-brand="catrusty"
                                       data-product-category="127"
                                       data-product-variant=
@@ -197,7 +197,7 @@
                                         <button class=
                                         "btn add-cart full-length"
                                         data-product-id="925185"
-                                        data-product-price="300"
+                                        data-product-price="500"
                                         data-product-brand=
                                         "catrusty"
                                         data-product-category="127"
@@ -244,7 +244,7 @@
                           "market-item-detail-item-image-wrapper">
                             <img alt="リボン付き貝飾り" class=
                             "market-item-detail-item-image" src=
-                            "https://booth.pximg.net/42ee0553-4a9c-4ab5-8673-ebcc9fd6f0be/i/925185/6682231e-50c4-4ec6-b3d9-9235d1b71f0c_base_resized.jpg">
+                            "https://booth.pximg.net/42ee0553-4a9c-4ab5-8673-ebcc9fd6f0be/i/925185/7964a609-bcb2-4c59-8f42-e34b854f2af8_base_resized.jpg">
                           </div>
                         </div>
                         <div>
@@ -253,7 +253,7 @@
                             <img alt="リボン付き貝飾り" class=
                             "market-item-detail-item-image"
                             data-lazy=
-                            "https://booth.pximg.net/42ee0553-4a9c-4ab5-8673-ebcc9fd6f0be/i/925185/2d17d966-ec0c-4c0a-8978-3e675d28a91c_base_resized.jpg">
+                            "https://booth.pximg.net/42ee0553-4a9c-4ab5-8673-ebcc9fd6f0be/i/925185/6070aebd-e6b9-4fa3-9c07-ecec49cf7f66_base_resized.jpg">
                           </div>
                         </div>
                         <div>
@@ -262,16 +262,7 @@
                             <img alt="リボン付き貝飾り" class=
                             "market-item-detail-item-image"
                             data-lazy=
-                            "https://booth.pximg.net/42ee0553-4a9c-4ab5-8673-ebcc9fd6f0be/i/925185/fb9f6b02-5c1b-4ee4-8cc1-d4101782b42a_base_resized.jpg">
-                          </div>
-                        </div>
-                        <div>
-                          <div class=
-                          "market-item-detail-item-image-wrapper">
-                            <img alt="リボン付き貝飾り" class=
-                            "market-item-detail-item-image"
-                            data-lazy=
-                            "https://booth.pximg.net/42ee0553-4a9c-4ab5-8673-ebcc9fd6f0be/i/925185/4db6c688-19a9-4b18-abd5-d828fff2ed66_base_resized.jpg">
+                            "https://booth.pximg.net/42ee0553-4a9c-4ab5-8673-ebcc9fd6f0be/i/925185/23549787-ae43-4a1a-a4f7-fc416c386fc9_base_resized.jpg">
                           </div>
                         </div>
                       </div>
@@ -279,19 +270,15 @@
                         <a class="pointer">
                         <div class="slick-thumbnail-border">
                           <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/42ee0553-4a9c-4ab5-8673-ebcc9fd6f0be/i/925185/6682231e-50c4-4ec6-b3d9-9235d1b71f0c_base_resized.jpg">
+                          "https://booth.pximg.net/c/72x72_a2_g5/42ee0553-4a9c-4ab5-8673-ebcc9fd6f0be/i/925185/7964a609-bcb2-4c59-8f42-e34b854f2af8_base_resized.jpg">
                         </div></a><a class="pointer">
                         <div class="slick-thumbnail-border">
                           <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/42ee0553-4a9c-4ab5-8673-ebcc9fd6f0be/i/925185/2d17d966-ec0c-4c0a-8978-3e675d28a91c_base_resized.jpg">
+                          "https://booth.pximg.net/c/72x72_a2_g5/42ee0553-4a9c-4ab5-8673-ebcc9fd6f0be/i/925185/6070aebd-e6b9-4fa3-9c07-ecec49cf7f66_base_resized.jpg">
                         </div></a><a class="pointer">
                         <div class="slick-thumbnail-border">
                           <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/42ee0553-4a9c-4ab5-8673-ebcc9fd6f0be/i/925185/fb9f6b02-5c1b-4ee4-8cc1-d4101782b42a_base_resized.jpg">
-                        </div></a><a class="pointer">
-                        <div class="slick-thumbnail-border">
-                          <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/42ee0553-4a9c-4ab5-8673-ebcc9fd6f0be/i/925185/4db6c688-19a9-4b18-abd5-d828fff2ed66_base_resized.jpg">
+                          "https://booth.pximg.net/c/72x72_a2_g5/42ee0553-4a9c-4ab5-8673-ebcc9fd6f0be/i/925185/23549787-ae43-4a1a-a4f7-fc416c386fc9_base_resized.jpg">
                         </div></a>
                       </div>
                       <section>
@@ -299,14 +286,6 @@
                         "js-market-item-detail-description">
                           <p class="autolink u-text-wrap">
                             夏っぽいイメージの貝飾りです。 服や水着などにワンポイントつけると可愛いかも。
-                            ～内容物～ ・FBX ・テクスチャ ・unitypackage
-                            ・各種説明書（画像説明ありのPDF形式）
-                            　※（12/07）ネットで見られる手順書を作成しました（PDFは情報が古い可能性があります）
-                            ★利用規約・導入などの説明はこちらをご覧ください。（ページ下部から該当シートを選んでください）
-                            https://docs.google.com/spreadsheets/d/1DCh-S5Rafb_NYJTQHtXame5xNWiDTWg5RKkcSiIdyXA/edit?usp=sharing
-                            ～詳細～ ・三角面数：200 ・ダイナミックボーン対応 ・マテリアル：2
-                            ・まんまるしぇーだーを適用済み
-                            　※必要に応じて最新版のシェーダーをご使用ください。
                           </p>
                         </div>
                       </section>
@@ -337,6 +316,17 @@
                               <div class=
                               "search-guide-tablet-label-inner">
                                 3D
+                              </div>
+                            </div></a><a class=
+                            "search-guide-tablet" data-tracking=
+                            "click" data-product-list=
+                            "from market_show via tag_list to search_index"
+                            href=
+                            "https://booth.pm/ja/search/%E3%82%A2%E3%82%AF%E3%82%BB%E3%82%B5%E3%83%AA">
+                            <div class="search-guide-tablet-label">
+                              <div class=
+                              "search-guide-tablet-label-inner">
+                                アクセサリ
                               </div>
                             </div></a><a class=
                             "search-guide-tablet" data-tracking=
