updated at: 2020-01-21 16:13, 花冠 - DeR雑貨屋 - BOOTH

--- a/VRChat/55/1036055.html
+++ b/VRChat/55/1036055.html
@@ -6,7 +6,7 @@
       花冠 - DeR雑貨屋 - BOOTH
     </title>
     <meta name="description" content=
-    "VRChat想定の花冠です。 ご自由に使用、改変などしてください。 ただし、再配布は禁止とさせていただきます。 kawaiiはカロリーな3494ポリゴン。 改善点、ご要望はこちらにどうぞ。 https://kansoubako.net/#/topiris_vrc">
+    "VRChat想定の花冠です。 ご自由に使用、改変などしてください。 ただし、再配布は禁止とさせていただきます。 kawaiiはカロリーな3494ポリゴン。 改善点、ご要望ははメッセージにて">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1036055">
@@ -14,13 +14,13 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="花冠 - DeR雑貨屋 - BOOTH">
     <meta name="twitter:description" content=
-    "VRChat想定の花冠です。 ご自由に使用、改変などしてください。 ただし、再配布は禁止とさせていただきます。 kawaiiはカロリーな3494ポリゴン。 改善点、ご要望はこちらにどうぞ。 https://kansoubako.net/#/topiris_vrc">
+    "VRChat想定の花冠です。 ご自由に使用、改変などしてください。 ただし、再配布は禁止とさせていただきます。 kawaiiはカロリーな3494ポリゴン。 改善点、ご要望ははメッセージにて">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/b5c4a06f-dddd-4906-9857-1cee9aecdc33/i/1036055/ba4b5685-a1bb-4a36-8195-5bcd6f6007c6_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content="花冠 - DeR雑貨屋 - BOOTH">
     <meta property="og:description" content=
-    "VRChat想定の花冠です。 ご自由に使用、改変などしてください。 ただし、再配布は禁止とさせていただきます。 kawaiiはカロリーな3494ポリゴン。 改善点、ご要望はこちらにどうぞ。 https://kansoubako.net/#/topiris_vrc">
+    "VRChat想定の花冠です。 ご自由に使用、改変などしてください。 ただし、再配布は禁止とさせていただきます。 kawaiiはカロリーな3494ポリゴン。 改善点、ご要望ははメッセージにて">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/b5c4a06f-dddd-4906-9857-1cee9aecdc33/i/1036055/ba4b5685-a1bb-4a36-8195-5bcd6f6007c6_base_resized.jpg">
     <meta property="og:url" content=
@@ -270,8 +270,7 @@
                           <p class="autolink u-text-wrap">
                             VRChat想定の花冠です。 ご自由に使用、改変などしてください。
                             ただし、再配布は禁止とさせていただきます。
-                            kawaiiはカロリーな3494ポリゴン。 改善点、ご要望はこちらにどうぞ。
-                            https://kansoubako.net/#/topiris_vrc
+                            kawaiiはカロリーな3494ポリゴン。 改善点、ご要望ははメッセージにて
                           </p>
                         </div>
                       </section>
