updated at: 2020-01-21 16:14, ハロウィンアクセA - DeR雑貨屋 - BOOTH

--- a/VRChat/92/1035492.html
+++ b/VRChat/92/1035492.html
@@ -6,7 +6,7 @@
       ハロウィンアクセA - DeR雑貨屋 - BOOTH
     </title>
     <meta name="description" content=
-    "ハロウィンっぽいアクセです。 頭につけるなり、小道具につけるなり、ご自由に使用、改変などしてください。 ただし、再配布は禁止とさせていただきます。 改善点、ご要望などはツイッターか感想箱まで https://kansoubako.net/#/topiris_vrc">
+    "ハロウィンっぽいアクセです。 頭につけるなり、小道具につけるなり、ご自由に使用、改変などしてください。 ただし、再配布は禁止とさせていただきます。 改善点、ご要望などはメッセージにて">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1035492">
@@ -15,13 +15,13 @@
     <meta name="twitter:title" content=
     "ハロウィンアクセA - DeR雑貨屋 - BOOTH">
     <meta name="twitter:description" content=
-    "ハロウィンっぽいアクセです。 頭につけるなり、小道具につけるなり、ご自由に使用、改変などしてください。 ただし、再配布は禁止とさせていただきます。 改善点、ご要望などはツイッターか感想箱まで https://kansoubako.net/#/topiris_vrc">
+    "ハロウィンっぽいアクセです。 頭につけるなり、小道具につけるなり、ご自由に使用、改変などしてください。 ただし、再配布は禁止とさせていただきます。 改善点、ご要望などはメッセージにて">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/b5c4a06f-dddd-4906-9857-1cee9aecdc33/i/1035492/a7ce1dd2-1488-4198-b339-decebb6510be_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content="ハロウィンアクセA - DeR雑貨屋 - BOOTH">
     <meta property="og:description" content=
-    "ハロウィンっぽいアクセです。 頭につけるなり、小道具につけるなり、ご自由に使用、改変などしてください。 ただし、再配布は禁止とさせていただきます。 改善点、ご要望などはツイッターか感想箱まで https://kansoubako.net/#/topiris_vrc">
+    "ハロウィンっぽいアクセです。 頭につけるなり、小道具につけるなり、ご自由に使用、改変などしてください。 ただし、再配布は禁止とさせていただきます。 改善点、ご要望などはメッセージにて">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/b5c4a06f-dddd-4906-9857-1cee9aecdc33/i/1035492/a7ce1dd2-1488-4198-b339-decebb6510be_base_resized.jpg">
     <meta property="og:url" content=
@@ -272,9 +272,7 @@
                           <p class="autolink u-text-wrap">
                             ハロウィンっぽいアクセです。
                             頭につけるなり、小道具につけるなり、ご自由に使用、改変などしてください。
-                            ただし、再配布は禁止とさせていただきます。
-                            改善点、ご要望などはツイッターか感想箱まで
-                            https://kansoubako.net/#/topiris_vrc
+                            ただし、再配布は禁止とさせていただきます。 改善点、ご要望などはメッセージにて
                           </p>
                         </div>
                       </section>
