updated at: 2020-01-21 16:50, VRChat内のカメラ - DeR雑貨屋 - BOOTH

--- a/VRChat/51/1028151.html
+++ b/VRChat/51/1028151.html
@@ -6,7 +6,7 @@
       VRChat内のカメラ - DeR雑貨屋 - BOOTH
     </title>
     <meta name="description" content=
-    "VRChat内のカメラに似たものです。 良識のある範囲で、ご自由に使用、改変などしてください。 ただし再配布不可です。 サイズは自キャラが持っているカメラに近いスケールですが、 身長によって左右されるらしいので、必要があれば適度なサイズに調整してください。 2018/09/29 アイコン差分のレイヤー分けPSD追加しました ベーステクスチャのアイコンカラーを少し明るくしました 改善点、ご要望などはツイッターか感想箱まで https://kansoubako.net/#/topiris_vrc">
+    "VRChat内のカメラに似たものです。 良識のある範囲で、ご自由に使用、改変などしてください。 ただし再配布不可です。 サイズは自キャラが持っているカメラに近いスケールですが、 身長によって左右されるらしいので、必要があれば適度なサイズに調整してください。 2018/09/29 アイコン差分のレイヤー分けPSD追加しました ベーステクスチャのアイコンカラーを少し明るくしました 改善点、ご要望などはメッセージにて">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1028151">
@@ -15,14 +15,14 @@
     <meta name="twitter:title" content=
     "VRChat内のカメラ - DeR雑貨屋 - BOOTH">
     <meta name="twitter:description" content=
-    "VRChat内のカメラに似たものです。 良識のある範囲で、ご自由に使用、改変などしてください。 ただし再配布不可です。 サイズは自キャラが持っているカメラに近いスケールですが、 身長によって左右されるらしいので、必要があれば適度なサイズに調整してください。 2018/09/29 アイコン差分のレイヤー分けPSD追加しました ベーステクスチャのアイコンカラーを少し明るくしました 改善点、ご要望などはツイッターか感想箱まで https://kansoubako.net/#/topiris_vrc">
+    "VRChat内のカメラに似たものです。 良識のある範囲で、ご自由に使用、改変などしてください。 ただし再配布不可です。 サイズは自キャラが持っているカメラに近いスケールですが、 身長によって左右されるらしいので、必要があれば適度なサイズに調整してください。 2018/09/29 アイコン差分のレイヤー分けPSD追加しました ベーステクスチャのアイコンカラーを少し明るくしました 改善点、ご要望などはメッセージにて">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/b5c4a06f-dddd-4906-9857-1cee9aecdc33/i/1028151/c557d148-b653-4bb2-8259-a96299c73ecc_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
     "VRChat内のカメラ - DeR雑貨屋 - BOOTH">
     <meta property="og:description" content=
-    "VRChat内のカメラに似たものです。 良識のある範囲で、ご自由に使用、改変などしてください。 ただし再配布不可です。 サイズは自キャラが持っているカメラに近いスケールですが、 身長によって左右されるらしいので、必要があれば適度なサイズに調整してください。 2018/09/29 アイコン差分のレイヤー分けPSD追加しました ベーステクスチャのアイコンカラーを少し明るくしました 改善点、ご要望などはツイッターか感想箱まで https://kansoubako.net/#/topiris_vrc">
+    "VRChat内のカメラに似たものです。 良識のある範囲で、ご自由に使用、改変などしてください。 ただし再配布不可です。 サイズは自キャラが持っているカメラに近いスケールですが、 身長によって左右されるらしいので、必要があれば適度なサイズに調整してください。 2018/09/29 アイコン差分のレイヤー分けPSD追加しました ベーステクスチャのアイコンカラーを少し明るくしました 改善点、ご要望などはメッセージにて">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/b5c4a06f-dddd-4906-9857-1cee9aecdc33/i/1028151/c557d148-b653-4bb2-8259-a96299c73ecc_base_resized.jpg">
     <meta property="og:url" content=
@@ -341,8 +341,7 @@
                             身長によって左右されるらしいので、必要があれば適度なサイズに調整してください。
                             2018/09/29 アイコン差分のレイヤー分けPSD追加しました
                             ベーステクスチャのアイコンカラーを少し明るくしました
-                            改善点、ご要望などはツイッターか感想箱まで
-                            https://kansoubako.net/#/topiris_vrc
+                            改善点、ご要望などはメッセージにて
                           </p>
                         </div>
                       </section>
