updated at: 2020-01-21 17:38, 棺桶（coffin） - DeR雑貨屋 - BOOTH

--- a/VRChat/56/1002856.html
+++ b/VRChat/56/1002856.html
@@ -6,7 +6,7 @@
       棺桶（coffin） - DeR雑貨屋 - BOOTH
     </title>
     <meta name="description" content=
-    "VRC想定のシンプルな棺桶です。 ポリゴン数132 ご自由に使用、改変などしてください。 ただし、再配布は禁止とさせていただきます。 シーズナル品としてハロウィンまで期間限定で無料配布中です。 【使い方】 上下左右の簡単なスライドシェイプキー入りなのでAnimationなどで使ってみてね。 改善点、ご要望などはツイッターか感想箱まで https://kansoubako.net/#/topiris_vrc">
+    "VRC想定のシンプルな棺桶です。 ポリゴン数132 ご自由に使用、改変などしてください。 ただし、再配布は禁止とさせていただきます。 シーズナル品としてハロウィンまで期間限定で無料配布中です。 【使い方】 上下左右の簡単なスライドシェイプキー入りなのでAnimationなどで使ってみてね。 改善点、ご要望などはメッセージにて">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1002856">
@@ -15,14 +15,14 @@
     <meta name="twitter:title" content=
     "棺桶（coffin） - DeR雑貨屋 - BOOTH">
     <meta name="twitter:description" content=
-    "VRC想定のシンプルな棺桶です。 ポリゴン数132 ご自由に使用、改変などしてください。 ただし、再配布は禁止とさせていただきます。 シーズナル品としてハロウィンまで期間限定で無料配布中です。 【使い方】 上下左右の簡単なスライドシェイプキー入りなのでAnimationなどで使ってみてね。 改善点、ご要望などはツイッターか感想箱まで https://kansoubako.net/#/topiris_vrc">
+    "VRC想定のシンプルな棺桶です。 ポリゴン数132 ご自由に使用、改変などしてください。 ただし、再配布は禁止とさせていただきます。 シーズナル品としてハロウィンまで期間限定で無料配布中です。 【使い方】 上下左右の簡単なスライドシェイプキー入りなのでAnimationなどで使ってみてね。 改善点、ご要望などはメッセージにて">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/b5c4a06f-dddd-4906-9857-1cee9aecdc33/i/1002856/0c1ca36c-5378-4ca9-b6ff-5148bc85f1f1_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
     "棺桶（coffin） - DeR雑貨屋 - BOOTH">
     <meta property="og:description" content=
-    "VRC想定のシンプルな棺桶です。 ポリゴン数132 ご自由に使用、改変などしてください。 ただし、再配布は禁止とさせていただきます。 シーズナル品としてハロウィンまで期間限定で無料配布中です。 【使い方】 上下左右の簡単なスライドシェイプキー入りなのでAnimationなどで使ってみてね。 改善点、ご要望などはツイッターか感想箱まで https://kansoubako.net/#/topiris_vrc">
+    "VRC想定のシンプルな棺桶です。 ポリゴン数132 ご自由に使用、改変などしてください。 ただし、再配布は禁止とさせていただきます。 シーズナル品としてハロウィンまで期間限定で無料配布中です。 【使い方】 上下左右の簡単なスライドシェイプキー入りなのでAnimationなどで使ってみてね。 改善点、ご要望などはメッセージにて">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/b5c4a06f-dddd-4906-9857-1cee9aecdc33/i/1002856/0c1ca36c-5378-4ca9-b6ff-5148bc85f1f1_base_resized.jpg">
     <meta property="og:url" content=
@@ -302,8 +302,7 @@
                             ただし、再配布は禁止とさせていただきます。
                             シーズナル品としてハロウィンまで期間限定で無料配布中です。 【使い方】
                             上下左右の簡単なスライドシェイプキー入りなのでAnimationなどで使ってみてね。
-                            改善点、ご要望などはツイッターか感想箱まで
-                            https://kansoubako.net/#/topiris_vrc
+                            改善点、ご要望などはメッセージにて
                           </p>
                         </div>
                       </section>
