updated at: 2020-01-21 17:41, 釘バット - DeR雑貨屋 - BOOTH

--- a/VRChat/01/1000801.html
+++ b/VRChat/01/1000801.html
@@ -6,7 +6,7 @@
       釘バット - DeR雑貨屋 - BOOTH
     </title>
     <meta name="description" content=
-    "VRC想定の釘バットです。 ポリゴン数1722。 ご自由に使用、改変などしてください。 ただし、再配布は禁止とさせていただきます。 改善点、ご要望などはツイッターか感想箱まで https://kansoubako.net/#/topiris_vrc">
+    "VRC想定の釘バットです。 ポリゴン数1722。 ご自由に使用、改変などしてください。 ただし、再配布は禁止とさせていただきます。 改善点、ご要望などはメッセージにて">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1000801">
@@ -14,13 +14,13 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="釘バット - DeR雑貨屋 - BOOTH">
     <meta name="twitter:description" content=
-    "VRC想定の釘バットです。 ポリゴン数1722。 ご自由に使用、改変などしてください。 ただし、再配布は禁止とさせていただきます。 改善点、ご要望などはツイッターか感想箱まで https://kansoubako.net/#/topiris_vrc">
+    "VRC想定の釘バットです。 ポリゴン数1722。 ご自由に使用、改変などしてください。 ただし、再配布は禁止とさせていただきます。 改善点、ご要望などはメッセージにて">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/b5c4a06f-dddd-4906-9857-1cee9aecdc33/i/1000801/5738d3c5-f497-4cbc-a751-1000f0671718_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content="釘バット - DeR雑貨屋 - BOOTH">
     <meta property="og:description" content=
-    "VRC想定の釘バットです。 ポリゴン数1722。 ご自由に使用、改変などしてください。 ただし、再配布は禁止とさせていただきます。 改善点、ご要望などはツイッターか感想箱まで https://kansoubako.net/#/topiris_vrc">
+    "VRC想定の釘バットです。 ポリゴン数1722。 ご自由に使用、改変などしてください。 ただし、再配布は禁止とさせていただきます。 改善点、ご要望などはメッセージにて">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/b5c4a06f-dddd-4906-9857-1cee9aecdc33/i/1000801/5738d3c5-f497-4cbc-a751-1000f0671718_base_resized.jpg">
     <meta property="og:url" content=
@@ -333,9 +333,7 @@
                           <p class="autolink u-text-wrap">
                             VRC想定の釘バットです。 ポリゴン数1722。
                             ご自由に使用、改変などしてください。
-                            ただし、再配布は禁止とさせていただきます。
-                            改善点、ご要望などはツイッターか感想箱まで
-                            https://kansoubako.net/#/topiris_vrc
+                            ただし、再配布は禁止とさせていただきます。 改善点、ご要望などはメッセージにて
                           </p>
                         </div>
                       </section>
