updated at: 2020-01-21 17:48, 猫バッグ - DeR雑貨屋 - BOOTH

--- a/VRChat/95/996695.html
+++ b/VRChat/95/996695.html
@@ -6,7 +6,7 @@
       猫バッグ - DeR雑貨屋 - BOOTH
     </title>
     <meta name="description" content=
-    "VRChat想定の、猫の形をしたバッグです。 ポリゴン数1172 ご自由に使用、改変などしてください。 ただし、再配布は禁止とさせていただきます。 改善点、要望などは感想箱かツイッターにて。 https://kansoubako.net/#/topiris_vrc 【使い方】 紐にボーンを適当に仕込んでいますので、ユニティ上でも引き伸ばしなどある程度は調整が可能です。 金箇所と布地で、テクスチャをざっくりレイヤー分けしたPSDを入れています。 【アップデート】 2018/09/04 ver2 ダイナミックボーン対応のボーン構造にしました。 同時に、紐もメッシュ結合としました。">
+    "VRChat想定の、猫の形をしたバッグです。 ポリゴン数1172 ご自由に使用、改変などしてください。 ただし、再配布は禁止とさせていただきます。 改善点、要望などはメッセージにて 【使い方】 紐にボーンを適当に仕込んでいますので、ユニティ上でも引き伸ばしなどある程度は調整が可能です。 金箇所と布地で、テクスチャをざっくりレイヤー分けしたPSDを入れています。 【アップデート】 2018/09/04 ver2 ダイナミックボーン対応のボーン構造にしました。 同時に、紐もメッシュ結合としました。 肩掛け、斜め掛け、本体単品の３つ入っています。 フィードバックありがとうございました！">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/996695">
@@ -14,13 +14,13 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="猫バッグ - DeR雑貨屋 - BOOTH">
     <meta name="twitter:description" content=
-    "VRChat想定の、猫の形をしたバッグです。 ポリゴン数1172 ご自由に使用、改変などしてください。 ただし、再配布は禁止とさせていただきます。 改善点、要望などは感想箱かツイッターにて。 https://kansoubako.net/#/topiris_vrc 【使い方】 紐にボーンを適当に仕込んでいますので、ユニティ上でも引き伸ばしなどある程度は調整が可能です。 金箇所と布地で、テクスチャをざっくりレイヤー分けしたPSDを入れています。 【アップデート】 2018/09/04 ver2 ダイナミックボーン対応のボーン構造にしました。 同時に、紐もメッシュ結合としました。">
+    "VRChat想定の、猫の形をしたバッグです。 ポリゴン数1172 ご自由に使用、改変などしてください。 ただし、再配布は禁止とさせていただきます。 改善点、要望などはメッセージにて 【使い方】 紐にボーンを適当に仕込んでいますので、ユニティ上でも引き伸ばしなどある程度は調整が可能です。 金箇所と布地で、テクスチャをざっくりレイヤー分けしたPSDを入れています。 【アップデート】 2018/09/04 ver2 ダイナミックボーン対応のボーン構造にしました。 同時に、紐もメッシュ結合としました。 肩掛け、斜め掛け、本体単品の３つ入っています。 フィードバックありがとうございました！">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/b5c4a06f-dddd-4906-9857-1cee9aecdc33/i/996695/806641a1-dfc6-4c4e-9529-a32305589d0a_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content="猫バッグ - DeR雑貨屋 - BOOTH">
     <meta property="og:description" content=
-    "VRChat想定の、猫の形をしたバッグです。 ポリゴン数1172 ご自由に使用、改変などしてください。 ただし、再配布は禁止とさせていただきます。 改善点、要望などは感想箱かツイッターにて。 https://kansoubako.net/#/topiris_vrc 【使い方】 紐にボーンを適当に仕込んでいますので、ユニティ上でも引き伸ばしなどある程度は調整が可能です。 金箇所と布地で、テクスチャをざっくりレイヤー分けしたPSDを入れています。 【アップデート】 2018/09/04 ver2 ダイナミックボーン対応のボーン構造にしました。 同時に、紐もメッシュ結合としました。">
+    "VRChat想定の、猫の形をしたバッグです。 ポリゴン数1172 ご自由に使用、改変などしてください。 ただし、再配布は禁止とさせていただきます。 改善点、要望などはメッセージにて 【使い方】 紐にボーンを適当に仕込んでいますので、ユニティ上でも引き伸ばしなどある程度は調整が可能です。 金箇所と布地で、テクスチャをざっくりレイヤー分けしたPSDを入れています。 【アップデート】 2018/09/04 ver2 ダイナミックボーン対応のボーン構造にしました。 同時に、紐もメッシュ結合としました。 肩掛け、斜め掛け、本体単品の３つ入っています。 フィードバックありがとうございました！">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/b5c4a06f-dddd-4906-9857-1cee9aecdc33/i/996695/806641a1-dfc6-4c4e-9529-a32305589d0a_base_resized.jpg">
     <meta property="og:url" content=
@@ -359,9 +359,7 @@
                           <p class="autolink u-text-wrap">
                             VRChat想定の、猫の形をしたバッグです。 ポリゴン数1172
                             ご自由に使用、改変などしてください。
-                            ただし、再配布は禁止とさせていただきます。
-                            改善点、要望などは感想箱かツイッターにて。
-                            https://kansoubako.net/#/topiris_vrc
+                            ただし、再配布は禁止とさせていただきます。 改善点、要望などはメッセージにて
                             【使い方】
                             紐にボーンを適当に仕込んでいますので、ユニティ上でも引き伸ばしなどある程度は調整が可能です。
                             金箇所と布地で、テクスチャをざっくりレイヤー分けしたPSDを入れています。
