updated at: 2020-01-21 17:52, 【VRChat想定】ファンタジー風の杖 - DeR雑貨屋 - BOOTH

--- a/VRChat/23/993023.html
+++ b/VRChat/23/993023.html
@@ -6,7 +6,7 @@
       【VRChat想定】ファンタジー風の杖 - DeR雑貨屋 - BOOTH
     </title>
     <meta name="description" content=
-    "VRChat想定の、ありがちなファンタジー風の杖です。 表現性は使用シェーダーに依存すると思われるので、ご自由に使用、改変などしてください。 ただし、再配布は禁止とさせていただきます。 ２８３８ポリゴン。 球体部、螺旋部、その他でマテリアル3分割。 改善点、ご要望はこちらにどうぞ。 https://kansoubako.net/#/topiris_vr">
+    "VRChat想定の、ありがちなファンタジー風の杖です。 表現性は使用シェーダーに依存すると思われるので、ご自由に使用、改変などしてください。 ただし、再配布は禁止とさせていただきます。 ２８３８ポリゴン。 球体部、螺旋部、その他でマテリアル3分割。 改善点、ご要望はメッセージにて">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/993023">
@@ -15,14 +15,14 @@
     <meta name="twitter:title" content=
     "【VRChat想定】ファンタジー風の杖 - DeR雑貨屋 - BOOTH">
     <meta name="twitter:description" content=
-    "VRChat想定の、ありがちなファンタジー風の杖です。 表現性は使用シェーダーに依存すると思われるので、ご自由に使用、改変などしてください。 ただし、再配布は禁止とさせていただきます。 ２８３８ポリゴン。 球体部、螺旋部、その他でマテリアル3分割。 改善点、ご要望はこちらにどうぞ。 https://kansoubako.net/#/topiris_vr">
+    "VRChat想定の、ありがちなファンタジー風の杖です。 表現性は使用シェーダーに依存すると思われるので、ご自由に使用、改変などしてください。 ただし、再配布は禁止とさせていただきます。 ２８３８ポリゴン。 球体部、螺旋部、その他でマテリアル3分割。 改善点、ご要望はメッセージにて">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/b5c4a06f-dddd-4906-9857-1cee9aecdc33/i/993023/0f5b5e3f-5a95-4fcd-bbd3-978e6e7c4dad_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
     "【VRChat想定】ファンタジー風の杖 - DeR雑貨屋 - BOOTH">
     <meta property="og:description" content=
-    "VRChat想定の、ありがちなファンタジー風の杖です。 表現性は使用シェーダーに依存すると思われるので、ご自由に使用、改変などしてください。 ただし、再配布は禁止とさせていただきます。 ２８３８ポリゴン。 球体部、螺旋部、その他でマテリアル3分割。 改善点、ご要望はこちらにどうぞ。 https://kansoubako.net/#/topiris_vr">
+    "VRChat想定の、ありがちなファンタジー風の杖です。 表現性は使用シェーダーに依存すると思われるので、ご自由に使用、改変などしてください。 ただし、再配布は禁止とさせていただきます。 ２８３８ポリゴン。 球体部、螺旋部、その他でマテリアル3分割。 改善点、ご要望はメッセージにて">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/b5c4a06f-dddd-4906-9857-1cee9aecdc33/i/993023/0f5b5e3f-5a95-4fcd-bbd3-978e6e7c4dad_base_resized.jpg">
     <meta property="og:url" content=
@@ -337,8 +337,7 @@
                             VRChat想定の、ありがちなファンタジー風の杖です。
                             表現性は使用シェーダーに依存すると思われるので、ご自由に使用、改変などしてください。
                             ただし、再配布は禁止とさせていただきます。 ２８３８ポリゴン。
-                            球体部、螺旋部、その他でマテリアル3分割。 改善点、ご要望はこちらにどうぞ。
-                            https://kansoubako.net/#/topiris_vr
+                            球体部、螺旋部、その他でマテリアル3分割。 改善点、ご要望はメッセージにて
                           </p>
                         </div>
                       </section>
